security-workshops-2018/CFN-templates-staging_parameters_multiregion/make_security_groups.json
#you need to run this in a region with 3 AZs
{
  "AWSTemplateFormatVersion": "2010-09-09",
  
"Parameters" : {
     "SubnetAZa": {
      "Description": "First Availability Zone of the Subnets",
      "Type": "AWS::EC2::AvailabilityZone::Name"
    },
     "SubnetAZb": {
      "Description": "Second Availability Zone of the Subnets",
      "Type": "AWS::EC2::AvailabilityZone::Name"
    },
     "SubnetAZc": {
      "Description": "Third Availability Zone of the Subnets",
      "Type": "AWS::EC2::AvailabilityZone::Name"
    }

},




  "Resources": {
    "privateSubnetA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref" : "SubnetAZa" },
        "CidrBlock": "10.10.1.0/24",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Prod Private A"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "eb5db8c4-22df-4e72-ae65-0b7a7c5ed686"
        }
      }
    },
    "privateSubnetB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref" : "SubnetAZb" },
        "CidrBlock": "10.10.2.0/24",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Prod Private B"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "557d87c4-051d-41b0-b1d0-88591f7972bc"
        }
      }
    },
    "privateSubnetC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref" : "SubnetAZc" },
        "CidrBlock": "10.10.3.0/24",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Prod Private C"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "6ae1df37-537e-4e32-a715-4fd49bbc947b"
        }
      }
    },
    "PublicSubnetA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref" : "SubnetAZa" },
        "CidrBlock": "10.10.4.0/24",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Prod Public A"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "6fbc82b4-6b98-4efc-9312-fedaffebb2c5"
        }
      }
    },
    "PublicSubnetB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref" : "SubnetAZb" },
        "CidrBlock": "10.10.5.0/24",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Prod Public B"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "b2e3c5a0-9918-4927-a8ae-a77807d543b3"
        }
      }
    },
    "PublicSubnetC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": { "Ref" : "SubnetAZc" },
        "CidrBlock": "10.10.6.0/24",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Prod Public C"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "5a57a4ef-8b62-489d-af0d-3e89bcf53c5e"
        }
      }
    },
    "bastionSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Bastion security group",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "prod-bastion-ie-sg"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "727eb5b6-7a71-4232-9300-81ffca90ccc1"
        }
      }
    },
    "MongoSg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "MongoDB security group",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "27017",
            "ToPort": "27017",
            "SourceSecurityGroupId": {
              "Ref": "WebappSG"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "27017",
            "ToPort": "27017",
            "SourceSecurityGroupId": {
              "Ref": "SchedularSG"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "27017",
            "ToPort": "27017",
            "SourceSecurityGroupId": {
              "Ref": "AgentServiceSG"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "27017",
            "ToPort": "27017",
            "SourceSecurityGroupId": {
              "Ref": "NotificationServerSG"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "SourceSecurityGroupId": {
              "Ref": "bastionSG"
            }
          }
        ],
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "prod-mongo-sg"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "7e714f64-5d59-496f-9a1d-5403e93d6c55"
        }
      }
    },
    "SchedularSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Shedular security group",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "prod-schedular-sg"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ],
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "3389",
            "ToPort": "3389",
            "SourceSecurityGroupId": {
              "Ref": "bastionSG"
            }
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "3cab4dd2-adfb-4539-93ff-ae7dda85326e"
        }
      }
    },
    "WebappSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "WebApp security group",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "prod-webapp-sg"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ],
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "3389",
            "ToPort": "3389",
            "SourceSecurityGroupId": {
              "Ref": "bastionSG"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "SourceSecurityGroupId": {
              "Ref": "CentralElbSg"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "SourceSecurityGroupId": {
              "Ref": "CentralElbSg"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "555",
            "ToPort": "555",
            "SourceSecurityGroupId": {
              "Ref": "ApiElbSG"
            }
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "aed5c613-a77c-4b77-a9d2-dace58c79469"
        }
      }
    },
    "AgentServiceSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Agent Service security group",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "SourceSecurityGroupId": {
              "Ref": "bastionSG"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "3389",
            "ToPort": "3389",
            "SourceSecurityGroupId": {
              "Ref": "bastionSG"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "prod-agent-service-sg"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "036ce53c-4ac1-4677-8948-38414e322544"
        }
      }
    },
    "NotificationServerSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Notification server security group",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "27017",
            "ToPort": "27017",
            "SourceSecurityGroupId": {
              "Ref": "WebappSG"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "27017",
            "ToPort": "27017",
            "SourceSecurityGroupId": {
              "Ref": "SchedularSG"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "27017",
            "ToPort": "27017",
            "SourceSecurityGroupId": {
              "Ref": "AgentServiceSG"
            }
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "SourceSecurityGroupId": {
              "Ref": "bastionSG"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "prod-notification-service-sg"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "c130f637-d299-4ee7-95aa-9e294fa3e6dd"
        }
      }
    },
    "privateSubnetsRT": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "private subnets"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "d4c6b5de-756d-4760-8176-c16a0773d9bd"
        }
      }
    },
    "privateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "privateSubnetsRT"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGetway"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "dc47edfc-c935-4d13-8904-3afd3c2b97f8"
        }
      }
    },
    "PublicSubnetRT": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "public subnets"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "ba7e8212-f19c-4e15-8876-aa4b858c2d32"
        }
      }
    },
    "publicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "GatewayId": {
          "Ref": "InternetGetway"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "PublicSubnetRT"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "8cc425f6-c952-43bc-9306-434630a91804"
        }
      }
    },
    "publicSubnetARoute": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicSubnetRT"
        },
        "SubnetId": {
          "Ref": "PublicSubnetA"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "0a44b7c5-ef2f-4247-8631-321856f09aec"
        }
      }
    },
    "publicSubnetBRoute": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicSubnetRT"
        },
        "SubnetId": {
          "Ref": "PublicSubnetB"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "0a44b7c5-ef2f-4247-8631-321856f09aec"
        }
      }
    },
    "publicSubnetCRoute": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicSubnetRT"
        },
        "SubnetId": {
          "Ref": "PublicSubnetC"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "0a44b7c5-ef2f-4247-8631-321856f09aec"
        }
      }
    },
    "privateSubnetARoute": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "privateSubnetsRT"
        },
        "SubnetId": {
          "Ref": "privateSubnetA"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "0a44b7c5-ef2f-4247-8631-321856f09aec"
        }
      }
    },
    "privateSubnetBRoute": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "privateSubnetsRT"
        },
        "SubnetId": {
          "Ref": "privateSubnetB"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "97d7fabd-ab6a-4eab-ab63-68edb1383290"
        }
      }
    },
    "privateSubnetCRoute": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "privateSubnetsRT"
        },
        "SubnetId": {
          "Ref": "privateSubnetC"
        }
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "4991e48b-c8e5-40ac-a194-12c26916121c"
        }
      }
    },
    "InternetGetway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "productionDG"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "ebb61923-766f-4ebe-9189-ffe49a88c364"
        }
      }
    },
    "ProdVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.10.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "productionVPC"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "ffc998cd-85e4-4b07-8bb9-59de1092daff"
        }
      }
    },
    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "InternetGatewayId": {
          "Ref": "InternetGetway"
        }
      }
    },
    "CentralElbSg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Webapp ELB security group",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "prod-webapp-elb-sg"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "8818385b-5a0d-4aee-a6db-fb426dcc69d6"
        }
      }
    },
    "ApiElbSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "API ELB security group",
        "VpcId": {
          "Ref": "ProdVPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "443",
            "ToPort": "443",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "prod-api-elb-sg"
          },
          {
            "Key": "env",
            "Value": "prod"
          }
        ]
      },
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "67110940-d3fd-452b-8ece-447fb754591e"
        }
      }
    }
  }
}
